boxddd-sys/third-party/box3d/include/box3d/types.h

/// Low level ray cast input data.
typedef struct b3RayCastInput
{
	/// Start point of the ray cast.
	b3Vec3 origin;

	/// Translation of the ray cast.
	/// end = start + translation.
	b3Vec3 translation;

	/// The maximum fraction of the translation to consider, typically 1
	float maxFraction;
} b3RayCastInput;
/// A shape proxy is used by the GJK algorithm. It can represent a convex shape.
typedef struct b3ShapeProxy
{
	/// The point cloud.
	const b3Vec3* points;

	/// The number of points. Do not exceed B3_MAX_SHAPE_CAST_POINTS.
	int count;

	/// The external radius of the point cloud.
	float radius;
} b3ShapeProxy;
/// Input for sweeping an AABB through a dynamic tree. The box is in the tree's world float frame.
/// The caller folds the cast shape radius and any world origin into the box, so the tree traversal
/// stays a conservative box sweep and the precise narrow phase happens per shape in the callback.
typedef struct b3BoxCastInput
{
	/// The AABB to cast, in the tree's frame.
	b3AABB box;

	/// The sweep translation.
	b3Vec3 translation;

	/// The maximum fraction of the translation to consider, typically 1.
	float maxFraction;
} b3BoxCastInput;
/// Input parameters for b3ShapeCast
typedef struct b3ShapeCastPairInput
{
	b3ShapeProxy proxyA;   ///< The proxy for shape A
	b3ShapeProxy proxyB;   ///< The proxy for shape B
	b3Transform transform; ///< Transform of shape B in shape A's frame, the relative pose B in A
	b3Vec3 translationB;   ///< The translation of shape B, in A's frame
	float maxFraction;	   ///< The fraction of the translation to consider, typically 1
	bool canEncroach;	   ///< Allows shapes with a radius to move slightly closer if already touching
} b3ShapeCastPairInput;
/// Input for b3ShapeDistance
typedef struct b3DistanceInput
{
	/// The proxy for shape A
	b3ShapeProxy proxyA;

	/// The proxy for shape B
	b3ShapeProxy proxyB;

	/// Transform of shape B in shape A's frame, the relative pose B in A
	/// (b3InvMulWorldTransforms( worldA, worldB )). The query is origin independent and runs in frame A.
	b3Transform transform;

	/// Should the proxy radius be considered?
	bool useRadii;
} b3DistanceInput;
/// Output for b3ShapeDistance
typedef struct b3DistanceOutput
{
	b3Vec3 pointA;	  ///< Closest point on shapeA, in shape A's frame
	b3Vec3 pointB;	  ///< Closest point on shapeB, in shape A's frame
	b3Vec3 normal;	  ///< A to B normal in shape A's frame. Invalid if distance is zero.
	float distance;	  ///< The final distance, zero if overlapped
	int iterations;	  ///< Number of GJK iterations used
	int simplexCount; ///< The number of simplexes stored in the simplex array
} b3DistanceOutput;
/// Simplex vertex for debugging the GJK algorithm
typedef struct b3SimplexVertex
{
	b3Vec3 wA;	///< support point in proxyA
	b3Vec3 wB;	///< support point in proxyB
	b3Vec3 w;	///< wB - wA
	float a;	///< barycentric coordinates
	int indexA; ///< wA index
	int indexB; ///< wB index
} b3SimplexVertex;
/// Simplex from the GJK algorithm
typedef struct b3Simplex
{
	b3SimplexVertex vertices[4]; ///< vertices
	int count;					 ///< number of valid vertices
} b3Simplex;
/// This describes the motion of a body/shape for TOI computation. Shapes are defined with respect to the body origin,
/// which may not coincide with the center of mass. However, to support dynamics we must interpolate the center of mass
/// position.
typedef struct b3Sweep
{
	b3Vec3 localCenter; ///< Local center of mass position
	b3Vec3 c1;			///< Starting center of mass world position
	b3Vec3 c2;			///< Ending center of mass world position
	b3Quat q1;			///< Starting world rotation
	b3Quat q2;			///< Ending world rotation
} b3Sweep;
/// Time of impact input
typedef struct b3TOIInput
{
	b3ShapeProxy proxyA; ///< The proxy for shape A
	b3ShapeProxy proxyB; ///< The proxy for shape B
	b3Sweep sweepA;		 ///< The movement of shape A
	b3Sweep sweepB;		 ///< The movement of shape B
	float maxFraction;	 ///< Defines the sweep interval [0, tMax]
} b3TOIInput;
/// Describes the TOI output
typedef enum b3TOIState
{
	b3_toiStateUnknown,
	b3_toiStateFailed,
	b3_toiStateOverlapped,
	b3_toiStateHit,
	b3_toiStateSeparated
} b3TOIState;
/// Time of impact output
typedef struct b3TOIOutput
{
	/// The type of result
	b3TOIState state;

	/// The hit point
	b3Vec3 point;

	/// The hit normal
	b3Vec3 normal;

	/// The sweep time of the collision
	float fraction;

	/// The final distance
	float distance;

	/// Number of outer iterations
	int distanceIterations;

	/// Total number of push back iterations
	int pushBackIterations;

	/// Total number of root iterations
	int rootIterations;

	/// Indicates that the time of impact detected initial
	/// overlap and used a fallback sphere as a last ditch effort
	/// to prevent tunneling.
	bool usedFallback;
} b3TOIOutput;
/**@}*/ // query

/**
 * @defgroup tree Dynamic Tree
 * The dynamic tree is a binary AABB tree to organize and query large numbers of geometric objects
 *
 * Box3D uses the dynamic tree internally to sort collision shapes into a binary bounding volume hierarchy.
 * This data structure may have uses in games for organizing other geometry data and may be used independently
 * of Box3D rigid body simulation.
 *
 * A dynamic AABB tree broad-phase, inspired by Nathanael Presson's btDbvt.
 * A dynamic tree arranges data in a binary tree to accelerate
 * queries such as AABB queries and ray casts. Leaf nodes are proxies
 * with an AABB. These are used to hold a user collision object.
 * Nodes are pooled and relocatable, so I use node indices rather than pointers.
 * The dynamic tree is made available for advanced users that would like to use it to organize
 * spatial game data besides rigid bodies.
 * @{
 */

/// Flags for tree nodes. For internal usage.
typedef enum b3TreeNodeFlags
{
	b3_allocatedNode = 0x0001,
	b3_enlargedNode = 0x0002,
	b3_leafNode = 0x0004,
} b3TreeNodeFlags;
/// Tree node child indices. For internal usage.
typedef struct b3TreeNodeChildren
{
	int child1; ///< child node index 1
	int child2; ///< child node index 2
} b3TreeNodeChildren;
/// A node in the dynamic tree. This is private data placed here for performance reasons.
/// todo test padding to 64 bytes to avoid straddling cache lines
typedef struct b3TreeNode
{
	/// The node bounding box
	b3AABB aabb; // 24

	/// Category bits for collision filtering
	uint64_t categoryBits; // 8

	union
	{
		/// Children (internal node)
		b3TreeNodeChildren children;

		/// User data (leaf node)
		uint64_t userData;
	}; // 8

	union
	{
		/// The node parent index (allocated node)
		int parent;

		/// The node freelist next index (free node)
		int next;
	}; // 4

	/// Height of the node. Leaves have a height of 0.
	uint16_t height; // 2

	/// @see b3TreeNodeFlags
	uint16_t flags; // 2
} b3TreeNode;
/// The dynamic tree structure. This should be considered private data.
/// It is placed here for performance reasons.
typedef struct b3DynamicTree
{
	/// The dynamic tree version. Always the first field. Useful
	/// if the tree is serialized.
	uint64_t version;

	/// The tree nodes
	b3TreeNode* nodes;

	/// The root index
	int root;

	/// The number of nodes
	int nodeCount;

	/// The allocated node space
	int nodeCapacity;

	/// Number of proxies created
	int proxyCount;

	/// Node free list
	int freeList;

	/// Leaf indices for rebuild
	int* leafIndices;

	/// Leaf bounding boxes for rebuild
	b3AABB* leafBoxes;

	/// Leaf bounding box centers for rebuild
	b3Vec3* leafCenters;

	/// Bins for sorting during rebuild
	int* binIndices;

	/// Allocated space for rebuilding
	int rebuildCapacity;
} b3DynamicTree;
/// These are performance results returned by dynamic tree queries.
typedef struct b3TreeStats
{
	/// Number of internal nodes visited during the query
	int nodeVisits;

	/// Number of leaf nodes visited during the query
	int leafVisits;
} b3TreeStats;
/// This function receives proxies found in the AABB query.
/// @return true if the query should continue
typedef bool b3TreeQueryCallbackFcn( int proxyId, uint64_t userData, void* context );
/// This function receives the minimum distance squared so far and proxy to check in the closest query.
/// @return minimum distance squared to user objects in the proxy
typedef float b3TreeQueryClosestCallbackFcn( float distanceSqrMin, int proxyId, uint64_t userData, void* context );
/// This function receives clipped AABB cast input for a proxy. The function returns the new cast
/// fraction.
/// - return a value of 0 to terminate the cast
/// - return a value less than input->maxFraction to clip the cast
/// - return a value of input->maxFraction to continue the cast without clipping
typedef float b3TreeBoxCastCallbackFcn( const b3BoxCastInput* input, int proxyId, uint64_t userData, void* context );
/// This function receives clipped ray cast input for a proxy. The function
/// returns the new ray fraction.
/// - return a value of 0 to terminate the ray cast
/// - return a value less than input->maxFraction to clip the ray
/// - return a value of input->maxFraction to continue the ray cast without clipping
typedef float b3TreeRayCastCallbackFcn( const b3RayCastInput* input, int proxyId, uint64_t userData, void* context );
/**@}*/ // tree

/**
 * @defgroup character Character Mover
 * Character movement solver
 * @{
 */

/// The plane between a character mover and a shape
typedef struct b3PlaneResult
{
	/// Outward pointing plane.
	b3Plane plane;

	/// Closest point on the shape. May not be unique.
	b3Vec3 point;

} b3PlaneResult;
/// These are collision planes that can be fed to b3SolvePlanes. Normally
/// this is assembled by the user from plane results in b3PlaneResult.
typedef struct b3CollisionPlane
{
	/// The collision plane between the mover and some shape.
	b3Plane plane;

	/// Setting this to FLT_MAX makes the plane as rigid as possible. Lower values can
	/// make the plane collision soft. Usually in meters.
	float pushLimit;

	/// The push on the mover determined by b3SolvePlanes. Usually in meters.
	float push;

	/// Indicates if b3ClipVector should clip against this plane. Should be false for soft collision.
	bool clipVelocity;
} b3CollisionPlane;
/// Result returned by b3SolvePlanes.
typedef struct b3PlaneSolverResult
{
	/// The final relative translation.
	b3Vec3 delta;

	/// The number of iterations used by the plane solver. For diagnostics.
	int iterationCount;
} b3PlaneSolverResult;
/// Body plane result for movers.
typedef struct b3BodyPlaneResult
{
	/// The shape id on the body.
	b3ShapeId shapeId;

	/// The plane result.
	b3PlaneResult result;
} b3BodyPlaneResult;
/// Used to collect collision planes for character movers.
/// Return true to continue gathering planes.
typedef bool b3PlaneResultFcn( b3ShapeId shapeId, const b3PlaneResult* plane, int planeCount, void* context );
/// Used to filter shapes for shape casting character movers.
/// Return true to accept the collision
typedef bool b3MoverFilterFcn( b3ShapeId shapeId, void* context );
/**@}*/ // mover

/**
 * @defgroup geometry Geometry
 * @brief Geometry types and algorithms
 *
 * Definitions of spheres, capsules, hulls, meshes, height fields, and compounds.
 * @{
 */

/// This holds the mass data computed for a shape.
typedef struct b3MassData
{
	/// The shape mass
	float mass;

	/// The local center of mass position.
	b3Vec3 center;

	/// The inertia tensor about the shape center of mass.
	b3Matrix3 inertia;
} b3MassData;
/**
 * @defgroup sphere Sphere
 * @brief Sphere primitive
 * @{
 */

/// A solid sphere
typedef struct b3Sphere
{
	/// The local center
	b3Vec3 center;

	/// The radius
	float radius;
} b3Sphere;