boxddd-sys/src/bindings_pregenerated.rs

/// Input parameters for b3ShapeCast
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3ShapeCastPairInput {
    ///< The proxy for shape A
    pub proxyA: b3ShapeProxy,
    ///< The proxy for shape B
    pub proxyB: b3ShapeProxy,
    ///< Transform of shape B in shape A's frame, the relative pose B in A
    pub transform: b3Transform,
    ///< The translation of shape B, in A's frame
    pub translationB: b3Vec3,
    ///< The fraction of the translation to consider, typically 1
    pub maxFraction: f32,
    ///< Allows shapes with a radius to move slightly closer if already touching
    pub canEncroach: bool,
}
/// Input for b3ShapeDistance
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3DistanceInput {
    /// The proxy for shape A
    pub proxyA: b3ShapeProxy,
    /// The proxy for shape B
    pub proxyB: b3ShapeProxy,
    /** Transform of shape B in shape A's frame, the relative pose B in A
 (b3InvMulWorldTransforms( worldA, worldB )). The query is origin independent and runs in frame A.*/
    pub transform: b3Transform,
    /// Should the proxy radius be considered?
    pub useRadii: bool,
}
/// Output for b3ShapeDistance
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3DistanceOutput {
    ///< Closest point on shapeA, in shape A's frame
    pub pointA: b3Vec3,
    ///< Closest point on shapeB, in shape A's frame
    pub pointB: b3Vec3,
    ///< A to B normal in shape A's frame. Invalid if distance is zero.
    pub normal: b3Vec3,
    ///< The final distance, zero if overlapped
    pub distance: f32,
    ///< Number of GJK iterations used
    pub iterations: ::std::os::raw::c_int,
    ///< The number of simplexes stored in the simplex array
    pub simplexCount: ::std::os::raw::c_int,
}
/// Simplex vertex for debugging the GJK algorithm
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3SimplexVertex {
    ///< support point in proxyA
    pub wA: b3Vec3,
    ///< support point in proxyB
    pub wB: b3Vec3,
    ///< wB - wA
    pub w: b3Vec3,
    ///< barycentric coordinates
    pub a: f32,
    ///< wA index
    pub indexA: ::std::os::raw::c_int,
    ///< wB index
    pub indexB: ::std::os::raw::c_int,
}
/// Simplex from the GJK algorithm
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3Simplex {
    ///< vertices
    pub vertices: [b3SimplexVertex; 4usize],
    ///< number of valid vertices
    pub count: ::std::os::raw::c_int,
}
/** This describes the motion of a body/shape for TOI computation. Shapes are defined with respect to the body origin,
 which may not coincide with the center of mass. However, to support dynamics we must interpolate the center of mass
 position.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3Sweep {
    ///< Local center of mass position
    pub localCenter: b3Vec3,
    ///< Starting center of mass world position
    pub c1: b3Vec3,
    ///< Ending center of mass world position
    pub c2: b3Vec3,
    ///< Starting world rotation
    pub q1: b3Quat,
    ///< Ending world rotation
    pub q2: b3Quat,
}
/// Time of impact input
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3TOIInput {
    ///< The proxy for shape A
    pub proxyA: b3ShapeProxy,
    ///< The proxy for shape B
    pub proxyB: b3ShapeProxy,
    ///< The movement of shape A
    pub sweepA: b3Sweep,
    ///< The movement of shape B
    pub sweepB: b3Sweep,
    ///< Defines the sweep interval [0, tMax]
    pub maxFraction: f32,
}
pub const b3TOIState_b3_toiStateUnknown: b3TOIState = 0;
pub const b3TOIState_b3_toiStateFailed: b3TOIState = 1;
pub const b3TOIState_b3_toiStateOverlapped: b3TOIState = 2;
pub const b3TOIState_b3_toiStateHit: b3TOIState = 3;
pub const b3TOIState_b3_toiStateSeparated: b3TOIState = 4;
/// Describes the TOI output
pub type b3TOIState = ::std::os::raw::c_uint;
/// Time of impact output
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3TOIOutput {
    /// The type of result
    pub state: b3TOIState,
    /// The hit point
    pub point: b3Vec3,
    /// The hit normal
    pub normal: b3Vec3,
    /// The sweep time of the collision
    pub fraction: f32,
    /// The final distance
    pub distance: f32,
    /// Number of outer iterations
    pub distanceIterations: ::std::os::raw::c_int,
    /// Total number of push back iterations
    pub pushBackIterations: ::std::os::raw::c_int,
    /// Total number of root iterations
    pub rootIterations: ::std::os::raw::c_int,
    /** Indicates that the time of impact detected initial
 overlap and used a fallback sphere as a last ditch effort
 to prevent tunneling.*/
    pub usedFallback: bool,
}
pub const b3TreeNodeFlags_b3_allocatedNode: b3TreeNodeFlags = 1;
pub const b3TreeNodeFlags_b3_enlargedNode: b3TreeNodeFlags = 2;
pub const b3TreeNodeFlags_b3_leafNode: b3TreeNodeFlags = 4;
/// Flags for tree nodes. For internal usage.
pub type b3TreeNodeFlags = ::std::os::raw::c_uint;
/// Tree node child indices. For internal usage.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3TreeNodeChildren {
    ///< child node index 1
    pub child1: ::std::os::raw::c_int,
    ///< child node index 2
    pub child2: ::std::os::raw::c_int,
}
/** A node in the dynamic tree. This is private data placed here for performance reasons.
 todo test padding to 64 bytes to avoid straddling cache lines*/
#[repr(C)]
#[derive(Copy, Clone)]
pub struct b3TreeNode {
    /// The node bounding box
    pub aabb: b3AABB,
    /// Category bits for collision filtering
    pub categoryBits: u64,
    pub __bindgen_anon_1: b3TreeNode__bindgen_ty_1,
    pub __bindgen_anon_2: b3TreeNode__bindgen_ty_2,
    /// Height of the node. Leaves have a height of 0.
    pub height: u16,
    /// @see b3TreeNodeFlags
    pub flags: u16,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union b3TreeNode__bindgen_ty_1 {
    /// Children (internal node)
    pub children: b3TreeNodeChildren,
    /// User data (leaf node)
    pub userData: u64,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union b3TreeNode__bindgen_ty_2 {
    /// The node parent index (allocated node)
    pub parent: ::std::os::raw::c_int,
    /// The node freelist next index (free node)
    pub next: ::std::os::raw::c_int,
}
/** The dynamic tree structure. This should be considered private data.
 It is placed here for performance reasons.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3DynamicTree {
    /** The dynamic tree version. Always the first field. Useful
 if the tree is serialized.*/
    pub version: u64,
    /// The tree nodes
    pub nodes: *mut b3TreeNode,
    /// The root index
    pub root: ::std::os::raw::c_int,
    /// The number of nodes
    pub nodeCount: ::std::os::raw::c_int,
    /// The allocated node space
    pub nodeCapacity: ::std::os::raw::c_int,
    /// Number of proxies created
    pub proxyCount: ::std::os::raw::c_int,
    /// Node free list
    pub freeList: ::std::os::raw::c_int,
    /// Leaf indices for rebuild
    pub leafIndices: *mut ::std::os::raw::c_int,
    /// Leaf bounding boxes for rebuild
    pub leafBoxes: *mut b3AABB,
    /// Leaf bounding box centers for rebuild
    pub leafCenters: *mut b3Vec3,
    /// Bins for sorting during rebuild
    pub binIndices: *mut ::std::os::raw::c_int,
    /// Allocated space for rebuilding
    pub rebuildCapacity: ::std::os::raw::c_int,
}
/// These are performance results returned by dynamic tree queries.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3TreeStats {
    /// Number of internal nodes visited during the query
    pub nodeVisits: ::std::os::raw::c_int,
    /// Number of leaf nodes visited during the query
    pub leafVisits: ::std::os::raw::c_int,
}
/** This function receives proxies found in the AABB query.
 @return true if the query should continue*/
pub type b3TreeQueryCallbackFcn = ::std::option::Option<
    unsafe extern "C" fn(
        proxyId: ::std::os::raw::c_int,
        userData: u64,
        context: *mut ::std::os::raw::c_void,
    ) -> bool,
>;
/** This function receives the minimum distance squared so far and proxy to check in the closest query.
 @return minimum distance squared to user objects in the proxy*/
pub type b3TreeQueryClosestCallbackFcn = ::std::option::Option<
    unsafe extern "C" fn(
        distanceSqrMin: f32,
        proxyId: ::std::os::raw::c_int,
        userData: u64,
        context: *mut ::std::os::raw::c_void,
    ) -> f32,
>;
/** This function receives clipped AABB cast input for a proxy. The function returns the new cast
 fraction.
 - return a value of 0 to terminate the cast
 - return a value less than input->maxFraction to clip the cast
 - return a value of input->maxFraction to continue the cast without clipping*/
pub type b3TreeBoxCastCallbackFcn = ::std::option::Option<
    unsafe extern "C" fn(
        input: *const b3BoxCastInput,
        proxyId: ::std::os::raw::c_int,
        userData: u64,
        context: *mut ::std::os::raw::c_void,
    ) -> f32,
>;
/** This function receives clipped ray cast input for a proxy. The function
 returns the new ray fraction.
 - return a value of 0 to terminate the ray cast
 - return a value less than input->maxFraction to clip the ray
 - return a value of input->maxFraction to continue the ray cast without clipping*/
pub type b3TreeRayCastCallbackFcn = ::std::option::Option<
    unsafe extern "C" fn(
        input: *const b3RayCastInput,
        proxyId: ::std::os::raw::c_int,
        userData: u64,
        context: *mut ::std::os::raw::c_void,
    ) -> f32,
>;
/// The plane between a character mover and a shape
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3PlaneResult {
    /// Outward pointing plane.
    pub plane: b3Plane,
    /// Closest point on the shape. May not be unique.
    pub point: b3Vec3,
}
/** These are collision planes that can be fed to b3SolvePlanes. Normally
 this is assembled by the user from plane results in b3PlaneResult.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3CollisionPlane {
    /// The collision plane between the mover and some shape.
    pub plane: b3Plane,
    /** Setting this to FLT_MAX makes the plane as rigid as possible. Lower values can
 make the plane collision soft. Usually in meters.*/
    pub pushLimit: f32,
    /// The push on the mover determined by b3SolvePlanes. Usually in meters.
    pub push: f32,
    /// Indicates if b3ClipVector should clip against this plane. Should be false for soft collision.
    pub clipVelocity: bool,
}
/// Result returned by b3SolvePlanes.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3PlaneSolverResult {
    /// The final relative translation.
    pub delta: b3Vec3,
    /// The number of iterations used by the plane solver. For diagnostics.
    pub iterationCount: ::std::os::raw::c_int,
}
/// Body plane result for movers.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3BodyPlaneResult {
    /// The shape id on the body.
    pub shapeId: b3ShapeId,
    /// The plane result.
    pub result: b3PlaneResult,
}
/** Used to collect collision planes for character movers.
 Return true to continue gathering planes.*/
pub type b3PlaneResultFcn = ::std::option::Option<
    unsafe extern "C" fn(
        shapeId: b3ShapeId,
        plane: *const b3PlaneResult,
        planeCount: ::std::os::raw::c_int,
        context: *mut ::std::os::raw::c_void,
    ) -> bool,
>;
/** Used to filter shapes for shape casting character movers.
 Return true to accept the collision*/
pub type b3MoverFilterFcn = ::std::option::Option<
    unsafe extern "C" fn(
        shapeId: b3ShapeId,
        context: *mut ::std::os::raw::c_void,
    ) -> bool,
>;
/// This holds the mass data computed for a shape.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3MassData {
    /// The shape mass
    pub mass: f32,
    /// The local center of mass position.
    pub center: b3Vec3,
    /// The inertia tensor about the shape center of mass.
    pub inertia: b3Matrix3,
}
/// A solid sphere
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3Sphere {
    /// The local center
    pub center: b3Vec3,
    /// The radius
    pub radius: f32,
}
